<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="wrap_content">
    <HorizontalScrollView android:layout_width="match_parent" android:layout_height="wrap_content">
        <RelativeLayout android:orientation="horizontal"
            android:layout_width="match_parent" android:layout_height="match_parent">
            <TableLayout
			    android:id="@+id/material_tb"
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:layout_marginTop="10dp"
			    android:layout_marginBottom="40dp"
			    android:layout_marginLeft="5dp"
			    android:layout_marginRight="5dp"
			    android:background="@color/tb_bg"
			    android:shrinkColumns="1,2,3,4">
			    <TableRow>
			        <TextView
			            style="@style/td1_1"
			            android:text="@string/indexNum" />
			        <TextView
			            style="@style/td1_1"
			            android:text="@string/p_materialName" />
			        <TextView
			            style="@style/td1_1"
			            android:text="@string/p_materialType" />
			        <TextView
			            style="@style/td1_1"
			            android:text="@string/p_materialCompany" />
			        <TextView
			            style="@style/td1_1"
			            android:text="@string/p_materialPi" />
			    </TableRow>
			</TableLayout>
        </RelativeLayout>
    </HorizontalScrollView>
</ScrollView>
