<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/ic_preference_single_normal" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="2"
            android:contentDescription="@string/content_description"
            android:src="@drawable/libui_star_full" />

        <TextView
            android:id="@+id/my_name"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="5"
            android:gravity="center"
            android:text="@string/my_name"
            android:textSize="20sp" />

        <Button
            android:id="@+id/upload_image"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center"
            android:layout_weight="3"
            android:text="@string/upload_image"
            android:textSize="14sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/ic_preference_single_normal"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/my_collection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="5dp"
            android:paddingTop="10dp"
            android:text="@string/my_collection"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/my_report"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:text="@string/my_report"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/my_advice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:paddingBottom="10dp"
            android:paddingTop="5dp"
            android:text="@string/my_advice"
            android:textColor="@color/black"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/ic_preference_single_normal"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/modify_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="5dp"
            android:paddingTop="10dp"
            android:text="@string/modify_password"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/loginOrLogout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:paddingBottom="10dp"
            android:paddingTop="5dp"
            android:text="@string/logout"
            android:textColor="@color/firebrick"
            android:textSize="20sp" />
    </LinearLayout>    

</LinearLayout>
