<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/green_printing"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/btn_style_three"
            android:gravity="center"
            android:text="@string/green_printing"
            android:textSize="15sp" />

        <Button
            android:id="@+id/green_lighter"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/btn_style_three"
            android:gravity="center"
            android:text="@string/green_lighter"
            android:textSize="15sp" />

        <Button
            android:id="@+id/building_material"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/btn_style_three"
            android:gravity="center"
            android:text="@string/building_material"
            android:textSize="15sp" />

        <Button
            android:id="@+id/active_speaker"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/btn_style_three"
            android:gravity="center"
            android:text="@string/active_speaker"
            android:textSize="15sp" />
    </LinearLayout>
    <android.support.v4.view.ViewPager
        android:id="@+id/viewpager"
        style="@drawable/btn_style_three"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:clickable="true" >

    </android.support.v4.view.ViewPager>

</LinearLayout>